Updated gallery and UI

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -6,9 +6,9 @@ $red:     #dc3545;
 $orange:  #fd7e14;
 $yellow:  #ffc107;
 $green:   #068f4f;
-$green-dark: #066e3e;
-$teal:    #20c997;
-$cyan:    #0dcaf0;
+$green-dark: #138851;
+$teal:    #58d6b0;
+$cyan:    #39c5e0;
 
 //white and gray colors
 $white:    #fff;
@@ -24,7 +24,7 @@ $gray-900: #212529;
 $black:    #000;
 
 
-$primary:       $teal;
+$primary:       $cyan;
 $secondary:     $green-dark;
 
 //accordion ovverides
