--- a/scss/components/_animations.scss
+++ b/scss/components/_animations.scss
@@ -11,3 +11,14 @@
         opacity: 0;
     }
 }
+
+@keyframes hand-transition {
+     0%{
+         left: 0px;
+         opacity: 1;
+     }
+     100% {
+         left: 300px;
+         opacity: 0;
+     }
+}
