--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -6,12 +6,13 @@
 }
 
 @mixin introgradient {
-    background: linear-gradient(to bottom, rgba(#ffc107, 0.95), rgba($secondary,0.95));
+    background: linear-gradient(to bottom, rgba(#ffc107, 0.95), rgba($primary,0.95));
 }
 
 @mixin btngradient {
     background: linear-gradient(to right, rgba($primary, 0.95), rgba($secondary,0.95));
 }
+
 
 //absoulte center
 @mixin absoluteCenter {
