--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -7,7 +7,8 @@
 
     &--intro {
         display: inline-block;
-        font-weight: 700;
+        font-size: 3rem;
+        font-weight: 500;
         color: $white;
         font-family: 'Poppins', sans-serif;
     }
@@ -29,7 +30,7 @@
 
 .heading-line::before {
     content:"";
-    width: 10rem;
+    width: 20rem;
     height: 0.1rem;
     display: block;
     margin: 0 auto;
@@ -38,7 +39,7 @@
 
 .heading-line::after {
     content:"";
-    width: 2rem;
+    width: 3rem;
     height: 0.2rem;
     padding-top: 0.5rem;
     display: block;
