--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -5,7 +5,8 @@
 .footer {
     margin-top: 10rem;
     padding-top: 1rem;
-    background-color: $secondary;
+    
+    @include gradient;
 }
 
 .contact-box {
@@ -23,6 +24,10 @@
             color:$white;
             text-decoration: none;
             font-size: 1.2rem;
+
+            &:hover {
+                color: $black;
+            }
         }
 
         &--subtitle {
