--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -3,7 +3,6 @@
 
 .menu {
    @include gradient;
-
     li {
         padding: 0 0.7rem;
 
@@ -13,4 +12,19 @@
             font-weight: 600;
         }
     }
+    .logo-img {
+        margin-left: 2rem;
+    }
+}
+
+.progress-container {
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+}
+  
+.progress-bar {
+    height: 8px;
+    background: #044caa;
+    width: 0%;
 }
